--- a/calculator/templates/calculator/index.html
+++ b/calculator/templates/calculator/index.html
@@ -19,7 +19,7 @@
     <title>calculator is ready</title>
   </head>
   <body>
-    <h1>calculator is ready ....</h1>
+    <h1 class="alert alert-primary lead">calculator is ready ....</h1>
 
     <form method="POST">
       {% csrf_token %}
@@ -27,7 +27,7 @@
         <div class="col-5">
           <input
             type="text"
-            class="form-control"
+            class="form-control text-left text-md-left"
             placeholder="First number"
             name="num1"
           />
@@ -48,8 +48,15 @@
             name="num2"
           />
         </div>
-        <button type="submit" class="form-control">response</button>
-        <label class="form-control text-center mt-4"> {{c}}</label>
+        <button type="submit" class="form-control mt-3 bg-primary text-white">
+          response
+        </button>
+        <h3
+          class="placeholder col-12 bg-warning text-center mt-3 pt-5"
+          style="height: 130px"
+        >
+          {{c}}
+        </h3>
       </div>
     </form>
 
